HFP-2479 Fix metadata popup not visible in fullscreen

--- a/styles/scss/_metadata-popup.scss
+++ b/styles/scss/_metadata-popup.scss
@@ -7,6 +7,6 @@
   background-color: rgba(0, 0, 0, 0.85);
   // Need to be higer than the different z-indexes in the custom editors
   // Like eg popups in CP, DnD and IV
-  z-index: 100;
+  z-index: 101;
   text-align: center;
 }
